// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleSelect component should handle builtin form validation 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #546A7F;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #546A7F;
}

.c3 ~ .sc-AxirZ {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  border-width: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  background-color: #E7F0FF;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  border-color: #126AFA;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb,
.c3:focus-within .c9,
.c3:focus-within:hover .c9 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb *,
.c3:focus-within .c9 *,
.c3:focus-within:hover .c9 * {
  fill: #126AFA;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
  caret-color: transparent;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c0 .c1:not(:focus-within):hover .c9 * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-singleSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-singleSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="medly-singleSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`SingleSelect component should render properly when isSearchable is true 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #546A7F;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #546A7F;
}

.c3 ~ .sc-AxirZ {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  border-width: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  background-color: #E7F0FF;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  border-color: #126AFA;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb,
.c3:focus-within .c9,
.c3:focus-within:hover .c9 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb *,
.c3:focus-within .c9 *,
.c3:focus-within:hover .c9 * {
  fill: #126AFA;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1:focus-within input {
  cursor: text;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c0 .c1:not(:focus-within):hover .c9 * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-singleSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-singleSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="medly-singleSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`SingleSelect component with filled variant should render disabled state properly  1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
  cursor: not-allowed;
  background-color: #F7F8F9;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #546A7F;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #546A7F;
}

.c3 ~ .sc-AxirZ {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3::after,
.c3:hover::after {
  border-width: 0.1rem;
  border-color: #C7D0D8;
}

.c3 input {
  color: #435465;
}

.c3 .c6 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #b0bcc8;
}

.c3 ~ .sc-AxirZ {
  color: #b0bcc8;
}

.c3 * {
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
  caret-color: transparent;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

<div>
  <div
    class="c0"
    disabled=""
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
        disabled=""
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-singleSelect-helper-text"
            autocomplete="off"
            class="c5"
            disabled=""
            id="medly-singleSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value="Dummy1"
          />
          <label
            class="c6 c7"
            for="medly-singleSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`SingleSelect component with filled variant should render error text properly 1`] = `
.c1 {
  font-size: 1.2rem;
  line-height: 1.6rem;
  margin: 0.5rem 1.6rem 0;
  white-space: initial;
}

.c2 ~ .c0 {
  color: #546A7F;
}

.c2 ~ .c0,
.c2:hover ~ .c0,
.c2:focus-within ~ .c0,
.c2:focus-within:hover ~ .c0 {
  color: #cc0000;
}

<span
  class="c0 c1"
  id="medly-singleSelect-helper-text"
>
  Something went wrong
</span>
`;

exports[`SingleSelect component with filled variant should render error text properly 2`] = `
.c1 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c1 * {
  fill-opacity: 1;
  fill: #607890;
}

.c3 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c7 .sc-AxhCb,
.c7 .c2 {
  color: #546A7F;
}

.c7 .sc-AxhCb *,
.c7 .c2 * {
  fill: #546A7F;
}

.c7 .sc-AxhCb,
.c7:hover .sc-AxhCb,
.c7:focus-within .sc-AxhCb,
.c7:focus-within:hover .sc-AxhCb,
.c7 .c2,
.c7:hover .c2,
.c7:focus-within .c2,
.c7:focus-within:hover .c2 {
  color: #cc0000;
}

.c7 .sc-AxhCb *,
.c7:hover .sc-AxhCb *,
.c7:focus-within .sc-AxhCb *,
.c7:focus-within:hover .sc-AxhCb *,
.c7 .c2 *,
.c7:hover .c2 *,
.c7:focus-within .c2 *,
.c7:focus-within:hover .c2 * {
  fill: #cc0000;
}

.c8 > .c0 {
  margin-left: 1.6rem;
}

.c8 > .c0 * {
  fill: #13181D;
}

.c9 > .c0 {
  margin-left: 1.6rem;
}

.c9 > .c0 * {
  fill: #cc0000;
}

.c4 .c6 .c2 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c4 .c6 .c2 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c5 .c6 .c2 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c5 .c6 .c2 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

<svg
  class="c0 c1 c2 c3"
  fill="none"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
    fill="#000"
  />
</svg>
`;

exports[`SingleSelect component with filled variant should render options correctly on click on the input 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  cursor: pointer;
  padding: 0 1.6rem;
  min-height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: #ffffff;
}

.c1:hover {
  background-color: #F7F8F9;
}

.c1 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #13181D;
}

.c1 > .c4 {
  margin-left: 1.6rem;
}

.c1 > .c4 * {
  fill: #13181D;
}

.c0 {
  z-index: 1000;
  position: absolute;
  top: 5.6rem;
  left: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  list-style: none;
  box-sizing: border-box;
  box-shadow: 0 0.2rem 0.8rem #B0BCC8;
  border-radius: 0 0 0.4rem 0.4rem;
}

.c0 li:first-child {
  border-radius: 0;
}

.c0 li:last-child {
  border-radius: 0 0 0.4rem 0.4rem;
}

<ul
  class="c0"
  id="medly-singleSelect-options"
>
  <li
    class="c1"
    id="All"
  >
    <span
      class="c2 c3"
    >
      All
    </span>
  </li>
  <li
    class="c1"
    id="Dummy1"
  >
    <span
      class="c2 c3"
    >
      Dummy1
    </span>
  </li>
  <li
    class="c1"
    id="Dummy2"
  >
    <span
      class="c2 c3"
    >
      Dummy2
    </span>
    <svg
      class="c4 c5"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.414 15.292l2.59-2.59a.996.996 0 0 0 0-1.41l-2.59-2.59c-.63-.62-1.71-.18-1.71.71v5.17c0 .9 1.08 1.34 1.71.71z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </li>
  <li
    class="c1"
    id="Dummy3"
  >
    <span
      class="c2 c3"
    >
      Dummy3
    </span>
  </li>
</ul>
`;

exports[`SingleSelect component with filled variant should render properly 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #546A7F;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #546A7F;
}

.c3 ~ .sc-AxirZ {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  border-width: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  background-color: #E7F0FF;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  border-color: #126AFA;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb,
.c3:focus-within .c9,
.c3:focus-within:hover .c9 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb *,
.c3:focus-within .c9 *,
.c3:focus-within:hover .c9 * {
  fill: #126AFA;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
  caret-color: transparent;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c0 .c1:not(:focus-within):hover .c9 * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-singleSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-singleSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value="Dummy1"
          />
          <label
            class="c6 c7"
            for="medly-singleSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`SingleSelect component with outlined variant should render disabled state properly  1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,55%,0);
  -ms-transform: translate3d(0,55%,0);
  transform: translate3d(0,55%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem;
  background-color: transparent;
  cursor: not-allowed;
  background-color: transparent;
}

.c3 .c6 {
  color: #607890;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #607890;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #607890;
}

.c3 ~ .sc-AxirZ {
  color: #546A7F;
}

.c3::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.4rem;
  border: 0.1rem solid #98A7B7;
}

.c3::after,
.c3:hover::after {
  border-width: 0.1rem;
  border-color: #C7D0D8;
}

.c3 input {
  color: #435465;
}

.c3 .c6 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #b0bcc8;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #b0bcc8;
}

.c3 ~ .sc-AxirZ {
  color: #b0bcc8;
}

.c3 * {
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
  caret-color: transparent;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

<div>
  <div
    class="c0"
    disabled=""
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
        disabled=""
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-singleSelect-helper-text"
            autocomplete="off"
            class="c5"
            disabled=""
            id="medly-singleSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value="Dummy1"
          />
          <label
            class="c6 c7"
            for="medly-singleSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`SingleSelect component with outlined variant should render error text properly 1`] = `
.c1 {
  font-size: 1.2rem;
  line-height: 1.6rem;
  margin: 0.5rem 1.6rem 0;
  white-space: initial;
}

.c2 ~ .c0 {
  color: #546A7F;
}

.c2 ~ .c0,
.c2:hover ~ .c0,
.c2:focus-within ~ .c0,
.c2:focus-within:hover ~ .c0 {
  color: #cc0000;
}

<span
  class="c0 c1"
  id="medly-singleSelect-helper-text"
>
  Something went wrong
</span>
`;

exports[`SingleSelect component with outlined variant should render error text properly 2`] = `
.c1 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c1 * {
  fill-opacity: 1;
  fill: #607890;
}

.c3 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c7 .sc-AxhCb,
.c7 .c2 {
  color: #607890;
}

.c7 .sc-AxhCb *,
.c7 .c2 * {
  fill: #607890;
}

.c7 .sc-AxhCb,
.c7:hover .sc-AxhCb,
.c7:focus-within .sc-AxhCb,
.c7:focus-within:hover .sc-AxhCb,
.c7 .c2,
.c7:hover .c2,
.c7:focus-within .c2,
.c7:focus-within:hover .c2 {
  color: #cc0000;
}

.c7 .sc-AxhCb *,
.c7:hover .sc-AxhCb *,
.c7:focus-within .sc-AxhCb *,
.c7:focus-within:hover .sc-AxhCb *,
.c7 .c2 *,
.c7:hover .c2 *,
.c7:focus-within .c2 *,
.c7:focus-within:hover .c2 * {
  fill: #cc0000;
}

.c8 > .c0 {
  margin-left: 1.6rem;
}

.c8 > .c0 * {
  fill: #13181D;
}

.c9 > .c0 {
  margin-left: 1.6rem;
}

.c9 > .c0 * {
  fill: #cc0000;
}

.c4 .c6 .c2 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c4 .c6 .c2 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c5 .c6 .c2 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c5 .c6 .c2 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

<svg
  class="c0 c1 c2 c3"
  fill="none"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
    fill="#000"
  />
</svg>
`;

exports[`SingleSelect component with outlined variant should render options correctly on click on the input 1`] = `
.c5 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  fill: #607890;
}

.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  cursor: pointer;
  padding: 0 1.6rem;
  min-height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: #ffffff;
}

.c1:hover {
  background-color: #F7F8F9;
}

.c1 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #13181D;
}

.c1 > .c4 {
  margin-left: 1.6rem;
}

.c1 > .c4 * {
  fill: #13181D;
}

.c0 {
  z-index: 1000;
  position: absolute;
  top: 5.6rem;
  left: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  list-style: none;
  box-sizing: border-box;
  box-shadow: 0 0.2rem 0.8rem #B0BCC8;
  border-radius: 0.4rem;
}

.c0 li:first-child {
  border-radius: 0.4rem 0.4rem 0 0;
}

.c0 li:last-child {
  border-radius: 0 0 0.4rem 0.4rem;
}

<ul
  class="c0"
  id="medly-singleSelect-options"
>
  <li
    class="c1"
    id="All"
  >
    <span
      class="c2 c3"
    >
      All
    </span>
  </li>
  <li
    class="c1"
    id="Dummy1"
  >
    <span
      class="c2 c3"
    >
      Dummy1
    </span>
  </li>
  <li
    class="c1"
    id="Dummy2"
  >
    <span
      class="c2 c3"
    >
      Dummy2
    </span>
    <svg
      class="c4 c5"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.414 15.292l2.59-2.59a.996.996 0 0 0 0-1.41l-2.59-2.59c-.63-.62-1.71-.18-1.71.71v5.17c0 .9 1.08 1.34 1.71.71z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
  </li>
  <li
    class="c1"
    id="Dummy3"
  >
    <span
      class="c2 c3"
    >
      Dummy3
    </span>
  </li>
</ul>
`;

exports[`SingleSelect component with outlined variant should render properly 1`] = `
.c8 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  fill: #607890;
}

.c7 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,55%,0);
  -ms-transform: translate3d(0,55%,0);
  transform: translate3d(0,55%,0);
}

.c10 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem;
  background-color: transparent;
}

.c3 .c6 {
  color: #607890;
}

.c3 .sc-AxhCb,
.c3 .c9 {
  color: #607890;
}

.c3 .sc-AxhCb *,
.c3 .c9 * {
  fill: #607890;
}

.c3 ~ .sc-AxirZ {
  color: #546A7F;
}

.c3::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.4rem;
  border: 0.1rem solid #98A7B7;
}

.c3:hover {
  box-shadow: 0px 0.2rem 0.8rem rgba(96,120,144,0.2);
}

.c3:focus-within {
  box-shadow: 0px 0.2rem 0.8rem rgba(18,106,250,0.2);
}

.c3:hover::after,
.c3:focus-within::after {
  border-width: 0.15rem;
  border-color: #607890;
}

.c3:focus-within,
.c3:focus-within:hover {
  background-color: transparent;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  border-color: #126AFA;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb,
.c3:focus-within .c9,
.c3:focus-within:hover .c9 {
  color: #126AFA;
}

.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb *,
.c3:focus-within .c9 *,
.c3:focus-within:hover .c9 * {
  fill: #126AFA;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: #C7D0D8;
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: #C7D0D8;
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: #C7D0D8;
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: #C7D0D8;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
  caret-color: transparent;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1 .c9 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 .c1 .c9 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c0 .c1:not(:focus-within):hover .c9 * {
  fill: #13181D;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-singleSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-singleSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value="Dummy1"
          />
          <label
            class="c6 c7"
            for="medly-singleSelect-input"
          />
        </div>
        <svg
          class="c8 c9 c10"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
            fill="#000"
          />
        </svg>
      </div>
      
    </div>
  </div>
</div>
`;
